--- a/camgames.ipynb
+++ b/camgames.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "08b5be38",
+   "id": "fa6e13f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9295614c",
+   "id": "06420e17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "66051ebf",
+   "id": "143c5b2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1fd77102",
+   "id": "0f22cb8b",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ed031b38",
+   "id": "14431263",
    "metadata": {},
    "outputs": [
     {
@@ -107,21 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "4b9165a8",
+   "execution_count": 27,
+   "id": "79e5e1cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy import ndimage\n",
     "def get_centroid (ndarray):\n",
     "    centroid = ndimage.center_of_mass((ndarray))\n",
-    "    return (centroid)"
+    "    return (np.array(centroid))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "907787bc",
+   "execution_count": 28,
+   "id": "9469d1c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,17 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "077625a5",
+   "execution_count": 29,
+   "id": "2d033102",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2955.0299854938476, 2896.0471573507234)"
+       "array([2955.02998549, 2896.04715735])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6cb05b91",
+   "id": "76fd6ce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,8 +161,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "51af4346",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(center)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a7f0ce96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alan = np.zeros(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "352f7b9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0.])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a31aa9a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0c555dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "function missing required argument 'year' (pos 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[38], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m time \u001b[38;5;241m=\u001b[39m \u001b[43mdatetime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdatetime\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(time)\n",
+      "\u001b[0;31mTypeError\u001b[0m: function missing required argument 'year' (pos 1)"
+     ]
+    }
+   ],
+   "source": [
+    "time = datetime.datetime()\n",
+    "print(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0fd6c58a",
+   "id": "b40ca82a",
    "metadata": {},
    "outputs": [],
    "source": []
